# LibreOffice-Addon-Sample

./: CMakeLists.txt  ConfigureUI.cmake  DispatchProvider.cxx  DispatchProvider.hxx  ExportComponent.cxx  ExportComponent.hxx  FindLibreOfficeSDK.cmake  Readme  Toolbar.cxx  Toolbar.hxx
ui/: Addons.xcu.in  MyDialog.xdl  ProtocolHandler.xcu  WriterWindowState.xcu  description.xml.in  manifest.xml.in  uno.components.in
uitest/: Simple.py
